tests/compile_fail/hash/unknown_field_attribute.stderr
error: expected one of: `with`, `skip`, `ignore`
 --> tests/compile_fail/hash/unknown_field_attribute.rs:2:19
  |
2 | struct Foo(#[hash(unknown)] i32);
  |                   ^^^^^^^
